2006-08-15  Christophe Bliard  <christophe.bliard@trux.info>

	* modules.xml: add dasher, gnome-terminal & gossip

2006-03-31  Vincent Untz  <vuntz@gnome.org>

	* modules.xml: add eog & gcalctool

2006-03-14  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: evince branched.

2006-03-13  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: branch zenity for gnome-2-14.

2006-03-13  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: branch epiphany, gnome-system-guide,
	gnome-accessibility-guide and gnome-user-guide.

2006-03-06  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Move release-notes up to 2.14.

2006-03-01  Danilo Šegan  <danilo@gnome.org>

	* doc-l10n-status.py (stats_as_html): list even untranslated items
	in each category.

2006-02-27  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added accessibility and system-admin guides.

2006-02-27  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added rhythmbox, just to beat vuntz to it.

2006-02-23  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Rename gnome2-user-guide to gnome-user-guide.

2006-02-22  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add gnome2-user-guide (woohoo)!

2006-02-20  Danilo Šegan  <danilo@gnome.org>

	* doc-l10n-status.py: Fix the below fix :).

2006-02-16  Danilo Šegan  <danilo@gnome.org>

	* doc-l10n-status.py: Use module id if cannot deduce correct
	DOC_MODULE value. 

2006-02-13  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: s/gnomemeeting/ekiga/.

2006-01-06  Vincent van Adrighem  <adrighem@gnome.org>

	* modules.xml: Typo in cvs-module (gnome-system-tools).

2006-01-06  Vincent Untz  <vuntz@gnome.org>

	* modules.xml: add gnome-utils

2006-01-06  Vincent Untz  <vuntz@gnome.org>

	* modules.xml: add gnome-system-tools

2006-01-05  Vincent van Adrighem  <adrighem@gnome.org>

	* modules.xml: Reordered modules (Alphabet), placing
	    generic stuff like tour and press-release first.
	    Added: gedit, gnome-control-center, gnome-keyring-manager.