@@ -90,6 +90,10 @@
     <cvs-directory>gnome-applets/trashapplet/docs</cvs-directory>
   </module>
 
+  <module id="baobab">
+    <cvs-directory>gnome-utils/baobab/help</cvs-directory>
+  </module>
+
   <module id="bug-buddy">
     <cvs-directory>bug-buddy/docs</cvs-directory>
     <cvs-branch>HEAD</cvs-branch>
@@ -135,6 +139,10 @@
     <cvs-branch>HEAD</cvs-branch>
   </module>
 
+  <module id="gfloppy">
+    <cvs-directory>gnome-utils/gfloppy/doc</cvs-directory>
+  </module>
+
   <module id="gdm2">
     <cvs-directory>gdm2/docs</cvs-directory>
     <!--<cvs-branch>gnome-2-12</cvs-branch>-->
@@ -177,27 +185,32 @@
 
   <module id="gnome-system-tools-boot">
     <cvs-directory>gnome-system-tools/doc/boot</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
+    <cvs-branch>gnome-2-14</cvs-branch>
+    <!--<cvs-branch>HEAD</cvs-branch>-->
   </module>
 
   <module id="gnome-system-tools-network">
     <cvs-directory>gnome-system-tools/doc/network</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
+    <!--<cvs-branch>HEAD</cvs-branch>-->
+    <cvs-branch>gnome-2-14</cvs-branch>
   </module>
 
   <module id="gnome-system-tools-services">
     <cvs-directory>gnome-system-tools/doc/services</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
+    <!--<cvs-branch>HEAD</cvs-branch>-->
+    <cvs-branch>gnome-2-14</cvs-branch>
   </module>
 
   <module id="gnome-system-tools-time">
     <cvs-directory>gnome-system-tools/doc/time</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
+    <!--<cvs-branch>HEAD</cvs-branch>-->
+    <cvs-branch>gnome-2-14</cvs-branch>
   </module>
 
   <module id="gnome-system-tools-users">
     <cvs-directory>gnome-system-tools/doc/users</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
+    <!--<cvs-branch>HEAD</cvs-branch>-->
+    <cvs-branch>gnome-2-14</cvs-branch>
   </module>
 
   <module id="gnome-terminal">
