@@ -1,3 +1,8 @@
+2006-08-17  Christophe Bliard  <christophe.bliard@trux.info>
+
+	* modules.xml: Add baobab and gfloppy; Change branch for
+	gnome-system-tools from HEAD to gnome-2-14
+
 2006-08-15  Christophe Bliard  <christophe.bliard@trux.info>
 
 	* modules.xml: add dasher, gnome-terminal & gossip
